--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost/db_blogpessoal?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=false
+spring.datasource.url=jdbc:mysql://localhost/db_lojadegames?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hiberte.diaclect.MySQLDialect
 
 spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
 
